@@ -21,4 +21,5 @@ t/09two-tags.t
 t/10wide-chars.t
 t/11tag-in-different-locations.t
 t/12missing-element-has-o-as-cdata.t
+t/pod-coverage.t
 t/pod.t
